# edgelord

./: .dugout.toml  .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  config.toml  config.toml.example  diesel.toml
.github/workflows/: ci.yml  deploy.yml  release.yml
deploy/: README.md  config.prod.toml
doc/: CODE_REVIEW.md  README.md  configuration.md  deployment.md  getting-started.md
doc/architecture/: overview.md  system-design.md
doc/deployment/: infrastructure.md  operations.md  telegram.md  wallet.md
doc/plans/: 2026-02-01-phase-1-foundation.md  2026-02-01-phase-2-detection.md  2026-02-01-phase-3-execution.md  2026-02-01-repository-restructure.md  2026-02-01-simple-arbitrage-bot-design.md  2026-02-02-code-review-fixes.md  2026-02-02-codebase-cleanup.md  2026-02-02-comprehensive-restructure.md  2026-02-02-deployment-cli-design.md  2026-02-02-deployment-cli-plan.md  2026-02-02-exchange-abstraction-cleanup.md  2026-02-02-multi-strategy-architecture.md  2026-02-02-phase-4-risk-telegram-restructure.md  2026-02-02-status-file-design.md  2026-02-02-structure-refactor.md  2026-02-03-adaptive-subscription-management-design.md  2026-02-03-adaptive-subscription-management-impl.md  2026-02-03-documentation-restructure-design.md  2026-02-03-documentation-restructure-impl.md  2026-02-03-large-file-splits-design.md  2026-02-03-large-file-splits-impl.md  2026-02-03-repository-restructure-design.md  2026-02-03-repository-restructure-impl.md  2026-02-03-websocket-reconnection.md  2026-02-04-cli-stats-improvements.md  2026-02-04-dependency-discovery-design.md  2026-02-04-production-hardening-plan.md  2026-02-05-consistency-test-cleanup.md  2026-02-05-plan-compression-design.md  2026-02-05-plan-compression.md  2026-02-05-statistics-uniformity.md
doc/research/: llm-dependency-discovery.md  novel-strategies.md
doc/strategies/: combinatorial.md  market-rebalancing.md  overview.md
docs/: README.md  cli-reference.md  configuration.md  getting-started.md  testing.md
docs/architecture/: overview.md
docs/deployment/: README.md  digitalocean-manual.md  infrastructure.md  operations.md  telegram.md  wallet.md
docs/extending/: architecture.md  exchanges.md  strategies.md
docs/plans/: 2026-02-01-phase-1-foundation.md  2026-02-01-phase-2-detection.md  2026-02-01-repository-restructure.md  2026-02-01-simple-arbitrage-bot-design.md  2026-02-02-codebase-cleanup.md  2026-02-02-comprehensive-restructure.md  2026-02-02-multi-exchange-abstraction.md  2026-02-02-multi-strategy-architecture.md  2026-02-02-phase-4-risk-telegram-restructure.md  2026-02-02-status-file-design.md  2026-02-02-structure-refactor.md  2026-02-03-adaptive-subscription-management-impl.md  2026-02-03-documentation-restructure-design.md  2026-02-03-documentation-restructure-impl.md  2026-02-03-repository-restructure-impl.md  2026-02-03-websocket-reconnection.md  2026-02-04-dependency-discovery-design.md  2026-02-04-production-hardening-plan.md  2026-02-05-consistency-test-cleanup-design.md  2026-02-05-plan-compression-design.md  2026-02-05-plan-compression.md  2026-02-06-provisioning-cli-design.md  2026-02-06-provisioning-cli-impl.md  2026-02-06-repo-quality-cleanup.md  2026-02-06-singular-file-names.md  2026-02-07-integration-hardening-and-validation.md  2026-02-21-open-source-framework-design.md  2026-02-21-open-source-refactor.md  2026-02-22-astral-cli-polish-design.md  2026-02-22-hexagonal-srp-aesthetic-cleanup.md  2026-02-22-srp-hotspot-cleanup-plan.md
docs/research/: combinatorial-future.md  novel-strategies.md  polymarket-arbitrage.md  polymarket-technical.md
docs/strategies/: combinatorial.md  market-rebalancing.md  overview.md  single-condition.md
migrations/2026-02-04-160931-0000_create_relations/: down.sql  up.sql
migrations/2026-02-04-200800_create_stats/: down.sql  up.sql
scripts/: compress_plans.py  install.sh
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  types.rs
src/adapter/: mod.rs
src/adapters/: mod.rs
src/api/: client.rs  mod.rs  types.rs
src/app/: config.rs  mod.rs  orchestrator.rs  state.rs  statistics.rs  stats.rs  status.rs  status_file.rs  wallet.rs
src/application/: mod.rs  state.rs
src/cli/: banner.rs  config.rs  diagnostic.rs  init.rs  logs.rs  mod.rs  output.rs  run.rs  service.rs  statistics.rs  stats.rs  status.rs  strategies.rs
src/core/: mod.rs
src/detector/: config.rs  mod.rs  single.rs
src/domain/: book.rs  cluster.rs  constraint.rs  detector.rs  error.rs  execution.rs  id.rs  market.rs  market_registry.rs  mod.rs  money.rs  opportunity.rs  order_book.rs  orderbook.rs  position.rs  relation.rs  score.rs  stats.rs  trade.rs  types.rs
src/exchange/: factory.rs  mod.rs  traits.rs
src/executor/: mod.rs  orders.rs  positions.rs
src/infrastructure/: bootstrap.rs  execution.rs  handler.rs  mod.rs  monitoring.rs  orchestrator.rs  orchestrator_builder.rs  state.rs  wallet.rs
src/orderbook/: cache.rs  mod.rs  registry.rs
src/polymarket/: client.rs  executor.rs  messages.rs  mod.rs  registry.rs  types.rs
src/port/: exchange.rs  mod.rs  notifier.rs  risk.rs  solver.rs  store.rs  strategy.rs
src/ports/: exchange.rs  inference.rs  mod.rs  notifier.rs  solver.rs  store.rs  strategy.rs
src/runtime/: builder.rs  execution.rs  handler.rs  mod.rs  orchestrator.rs  orchestrator_builder.rs  score.rs  state.rs
src/service/: mod.rs  notifier.rs  risk.rs  telegram.rs
src/testkit/: config.rs  domain.rs  mod.rs  (+2 more)
tests/: architecture_contract_tests.rs  cli_check_live_tests.rs  cli_output_tests.rs  cli_provision_tests.rs  cli_tests.rs  cli_wallet_tests.rs  cluster_detection_tests.rs  config_tests.rs  e2e_flow_tests.rs  exchange_tests.rs  execution_tests.rs  health_tests.rs  inference_integration.rs  inference_tests.rs  llm_integration.rs  multi_exchange_abstraction.rs  multi_exchange_tests.rs  polymarket_live_smoke_tests.rs  pool_integration_tests.rs  risk_tests.rs  stats_tests.rs  strategy_tests.rs  subscription_tests.rs
tools/: check-architecture.sh
(+467 files in other folders)
