[package]
name = "edgelord"
version = "0.1.0"
edition = "2021"
description = "Polymarket arbitrage detection and execution"
license = "MIT"

[features]
default = ["polymarket"]
polymarket = ["dep:polymarket-client-sdk", "dep:alloy-signer-local"]
telegram = ["dep:teloxide"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# HTTP (for REST API calls)
reqwest = { version = "0.12", features = ["json"] }

# Polymarket CLOB client (optional)
polymarket-client-sdk = { version = "0.4", features = ["clob"], optional = true }

# Alloy signer for wallet operations (optional, must match polymarket-client-sdk's version)
alloy-signer-local = { version = "1", optional = true }

# Telegram bot (optional)
teloxide = { version = "0.13", features = ["macros"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Decimal math
rust_decimal = { version = "1", features = ["serde"] }

# Configuration
dotenvy = "0.15"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Synchronization
parking_lot = "0.12"

# Async traits
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2"

# Linear programming solver (HiGHS)
good_lp = { version = "1.8", default-features = false, features = ["highs"] }

# Decimal macros for tests and constants
rust_decimal_macros = "1"

[dev-dependencies]
tokio-test = "0.4"
