[package]
name = "edgelord"
version = "0.1.0"
edition = "2021"
description = "Polymarket arbitrage detection and execution"
license = "UNLICENSED"

[features]
default = ["polymarket", "telegram"]
polymarket = [
    "dep:polymarket-client-sdk",
    "dep:alloy-signer-local",
    "dep:alloy-provider",
    "dep:alloy-contract",
    "dep:alloy-primitives",
    "dep:alloy-sol-types",
]
telegram = ["dep:teloxide"]
testkit = []

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# HTTP (for REST API calls)
reqwest = { version = "0.12", features = ["json"] }

# Polymarket CLOB client (optional)
polymarket-client-sdk = { version = "0.4", features = ["clob"], optional = true }

# Alloy for wallet operations (optional, must match polymarket-client-sdk's version)
alloy-signer-local = { version = "1", optional = true, features = ["keystore"] }
alloy-provider = { version = "1", optional = true }
alloy-contract = { version = "1", optional = true }
alloy-primitives = { version = "1", optional = true }
alloy-sol-types = { version = "1", optional = true }

# Telegram bot (optional)
teloxide = { version = "0.13", features = ["macros"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Decimal math
rust_decimal = { version = "1", features = ["serde"] }

# Configuration
dotenvy = "0.15"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
owo-colors = { version = "4", features = ["supports-colors"] }
indicatif = "0.17"
dialoguer = "0.11"
tabled = "0.16"

# Synchronization
parking_lot = "0.12"

# Async traits
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Database (Diesel ORM)
diesel = { version = "2", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2"

# URL parsing
url = "2"

# Unix system calls
libc = "0.2"

# Linear programming solver (HiGHS)
good_lp = { version = "1.8", default-features = false, features = ["highs"] }

# Decimal macros for tests and constants
rust_decimal_macros = "1"
num_cpus = "1.17.0"
dashmap = "6.1.0"
rand = "0.8"

[dev-dependencies]
edgelord = { path = ".", features = ["testkit"] }
tokio-test = "0.4"
