[package]
name = "edgelord"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A prediction market arbitrage detection and execution CLI."
authors = ["Rob Dekovich <rob@altoal.com>"]
repository = "https://github.com/usealtoal/edgelord"
homepage = "https://github.com/usealtoal/edgelord"
documentation = "https://docs.rs/edgelord"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["arbitrage", "prediction-markets", "trading", "polymarket", "cli"]
categories = ["command-line-utilities", "finance", "cryptography::cryptocurrencies"]
exclude = ["tests/", "docs/", ".github/"]

[[bin]]
name = "edgelord"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/edgelord-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "edgelord-{ target }/edgelord{ binary-ext }"

[features]
default = ["polymarket", "telegram"]
polymarket = [
    "dep:polymarket-client-sdk",
    "dep:alloy-signer-local",
    "dep:alloy-provider",
    "dep:alloy-transport-http",
    "dep:alloy-contract",
    "dep:alloy-primitives",
    "dep:alloy-sol-types",
]
telegram = ["dep:teloxide"]
testkit = []
# Enable integration tests that require real API keys and network access
integration-tests = []
# Polymarket-specific integration tests requiring network access and credentials
polymarket-integration = ["polymarket"]
# Telegram integration tests requiring real bot token and chat ID
telegram-integration = ["telegram"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# TLS (explicit rustls with ring backend to avoid crypto provider conflicts)
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

# HTTP (for REST API calls)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Polymarket CLOB client (optional)
polymarket-client-sdk = { version = "0.4", features = ["clob"], optional = true }

# Alloy for wallet operations (optional, must match polymarket-client-sdk's version)
alloy-signer-local = { version = "1", optional = true, features = ["keystore"] }
alloy-provider = { version = "1", optional = true, default-features = false, features = ["reqwest", "reqwest-rustls-tls"] }
alloy-transport-http = { version = "1", optional = true, default-features = false, features = ["reqwest", "reqwest-rustls-tls"] }
alloy-contract = { version = "1", optional = true }
alloy-primitives = { version = "1", optional = true }
alloy-sol-types = { version = "1", optional = true }

# Telegram bot (optional)
teloxide = { version = "0.13", default-features = false, features = ["macros", "rustls", "ctrlc_handler"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Decimal math
rust_decimal = { version = "1", features = ["serde"] }

# Configuration
dotenvy = "0.15"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
owo-colors = { version = "4", features = ["supports-colors"] }
indicatif = "0.17"
dialoguer = "0.11"
tabled = "0.16"

# Synchronization
parking_lot = "0.12"

# Async traits
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Database (Diesel ORM)
diesel = { version = "2", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2"
# Bundle sqlite3 for static/cross-compilation builds
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

# URL parsing
url = "2"

# Unix system calls
libc = "0.2"

# Linear programming solver (HiGHS)
good_lp = { version = "1.8", default-features = false, features = ["highs"] }

# Decimal macros for tests and constants
rust_decimal_macros = "1"
num_cpus = "1.17.0"
dashmap = "6.1.0"
rand = "0.8"
dirs = "6.0.0"

[dev-dependencies]
edgelord = { path = ".", features = ["testkit"] }
tokio-test = "0.4"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
